# techjobs_api

./: .env.development  .gitignore  .gitlab-ci.yml  LICENSE  Pipfile  README.md  cookiecutter-config-file.yml  docker-compose.override.yml  docker-compose.yml  manage.py  pyproject.toml
_old/techjobs_app/: apps.py
_old/techjobs_app/models/: broadcast_log_model.py  job_tag_model.py  temp_oauth_tokens.py  timestamp_mixin.py
_old/techjobs_root/: asgi.py
app/: config.py  main.py
app/db/: base_class.py  session.py
app/db_models/: job.py
backend/: .gitignore  backend.dockerfile  celeryworker.dockerfile
backend/app/: .gitignore  mypy.ini  pyproject.toml
backend/app/alembic/: env.py
frontend/: Dockerfile  README.md  babel.config.js  nginx-backend-not-found.conf  package.json  tsconfig.json  vue.config.js
frontend/public/: index.html  manifest.json
frontend/src/: App.vue  api.ts  component-hooks.ts  env.ts  main.ts  registerServiceWorker.ts  router.ts  utils.ts
main/models/: broadcast_log_model.py  job_audit_model.py  job_comment_model.py  job_model.py  job_tag_model.py
techjobs_app/migrations/: 0001_initial.py  0002_auto_20220105_0308.py  0002_auto_20220105_0308.txt
techjobs_app/models/: __init__.py  job_audit_model.py  job_comment_model.py  job_model.py  user_model.py
techjobs_app/schema/: github_oauth_query.py  query.py  schema.py
techjobs_app/services/: github_oauth_service.py
techjobs_app/tests/: __init__.py  auth_test.py
techjobs_app/views/: oauth_callback.py  oauth_callback_view.py  test_view.py
techjobs_root/: settings.py  urls.py  wsgi.py
techjobs_vagas/: asgi.py  settings.py  urls.py  wsgi.py
(+49 files in other folders)
