[tool.poetry]
name = "techjobs_api"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.1"
psycopg2 = "^2.9.3"
requests = "^2.27.1"
graphene-django = "^2.15.0"
django-environ = "^0.8.1"

[tool.poetry.dev-dependencies]
black = {version = "^21.12b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
