[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "techjobs_api"
version = "0.1.0"

[tool.poetry.dependencies]
Django = "^4.0.1"
django-environ = "^0.8.1"
psycopg2 = "^2.9.3"
python = "^3.10"
requests = "^2.27.1"
kink = "^0.6.2"
strawberry-graphql = {extras = ["debug-server"], version = "^0.93.22"}
strawberry-graphql-django = "^0.2.5"

[tool.poetry.dev-dependencies]
black = {version = "^21.12b0", allow-prereleases = true}

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.black]
line-length = 100
